--- a/.github/workflows/helm-test.yml
+++ b/.github/workflows/helm-test.yml
@@ -17,7 +17,7 @@ jobs:
           fetch-depth: 0
 
       - name: Set up Helm
-        uses: azure/setup-helm@v4
+        uses: azure/setup-helm@v3
         with:
           version: v3.12.1
       
@@ -49,45 +49,30 @@ jobs:
 
       - name: Create kind cluster
         if: steps.list-changed.outputs.changed == 'true'
-        uses: helm/kind-action@v1.9.0
+        uses: helm/kind-action@v1.8.0
 
-      - name: Install Helm Chart in namespace `doku`
+      - name: Install Helm Chart in namespace `doku-${{ github.run_id }}`
         if: steps.list-changed.outputs.changed == 'true'
-        run: helm install doku ./charts/doku --namespace doku --create-namespace
+        run: helm install doku-${{ github.run_id }} ./charts/doku --namespace doku-${{ github.run_id }} --create-namespace
 
-      - name: Wait for Pods to be ready in namespace `doku`
+      - name: Wait for Pods to be ready in namespace `doku-${{ github.run_id }}`
         if: steps.list-changed.outputs.changed == 'true'
         run: sleep 120
       
-      - name: Check Pod status in namespace `doku`
+      - name: Check Pod status in namespace `doku-${{ github.run_id }}`
         if: steps.list-changed.outputs.changed == 'true'
         run: |
-          kubectl get pods -n doku
+          kubectl get pods -n doku-${{ github.run_id }}
 
-      - name: Print logs for a pod with label `app=doku-ingester`
+      - name: Print logs for a pod with label `app=doku-${{ github.run_id }}`
         if: steps.list-changed.outputs.changed == 'true'
         run: |
-          kubectl logs -n doku -l app=doku-ingester
+          kubectl logs -n doku-${{ github.run_id }} -l app=doku-${{ github.run_id }}
       
-      - name: Print logs for a pod with label `app=doku-client`
+      - name: Check if Doku pods are running in namespace `doku-${{ github.run_id }}``
         if: steps.list-changed.outputs.changed == 'true'
         run: |
-          kubectl logs -n doku -l app=doku-client
-      
-      - name: Check if Doku Ingester pod is running
-        if: steps.list-changed.outputs.changed == 'true'
-        run: |
-          STATUS=$(kubectl get pods -l app=doku-ingester -n doku -o jsonpath="{.items[*].status.phase}")
-          if [ "$STATUS" != "Running" ]; then
-            echo "Pod is not in Running state: $STATUS"
-            exit 1
-          fi
-          echo "All pods are in the Running state."
-
-      - name: Check if Doku Client pod is running
-        if: steps.list-changed.outputs.changed == 'true'
-        run: |
-          STATUS=$(kubectl get pods -l app=doku-client -n doku -o jsonpath="{.items[*].status.phase}")
+          STATUS=$(kubectl get pods -l app=doku-${{ github.run_id }} -n doku-${{ github.run_id }} -o jsonpath="{.items[*].status.phase}")
           if [ "$STATUS" != "Running" ]; then
             echo "Pod is not in Running state: $STATUS"
             exit 1
