--- a/charts/doku/Chart.yaml
+++ b/charts/doku/Chart.yaml
@@ -2,10 +2,16 @@ apiVersion: v2
 name: doku
 description: A Helm chart for Doku
 type: application
-version: 0.1.3
-appVersion: 0.1.3
+version: 0.0.6
+appVersion: 0.0.4
 icon: https://raw.githubusercontent.com/dokulabs/.github/main/profile/assets/logo-orange-bg.jpg
 
 maintainers:
   - name: patcher99
-    email: patcher99@dokulabs.com
+    email: dokulabs1@gmail.com
+
+dependencies:
+- name: timescaledb-single
+  alias: timescaledb
+  version: 0.33.1
+  repository: "https://charts.timescale.com/"
