updtae helm chart

--- a/.github/workflows/helm-test.yml
+++ b/.github/workflows/helm-test.yml
@@ -51,43 +51,28 @@ jobs:
         if: steps.list-changed.outputs.changed == 'true'
         uses: helm/kind-action@v1.9.0
 
-      - name: Install Helm Chart in namespace `doku`
+      - name: Install Helm Chart in namespace `openlit`
         if: steps.list-changed.outputs.changed == 'true'
-        run: helm install doku ./charts/doku --namespace doku --create-namespace
+        run: helm install openlit ./charts/openlit --namespace openlit --create-namespace
 
-      - name: Wait for Pods to be ready in namespace `doku`
+      - name: Wait for Pods to be ready in namespace `openlit`
         if: steps.list-changed.outputs.changed == 'true'
         run: sleep 120
       
-      - name: Check Pod status in namespace `doku`
+      - name: Check Pod status in namespace `openlit`
         if: steps.list-changed.outputs.changed == 'true'
         run: |
-          kubectl get pods -n doku
+          kubectl get pods -n openlit
 
-      - name: Print logs for a pod with label `app=doku-ingester`
+      - name: Print logs for a pod with label `app=openlit`
         if: steps.list-changed.outputs.changed == 'true'
         run: |
-          kubectl logs -n doku -l app=doku-ingester
+          kubectl logs -n openlit -l app=openlit
       
-      - name: Print logs for a pod with label `app=doku-client`
+      - name: Check if OpenLIT pod is running
         if: steps.list-changed.outputs.changed == 'true'
         run: |
-          kubectl logs -n doku -l app=doku-client
-      
-      - name: Check if Doku Ingester pod is running
-        if: steps.list-changed.outputs.changed == 'true'
-        run: |
-          STATUS=$(kubectl get pods -l app=doku-ingester -n doku -o jsonpath="{.items[*].status.phase}")
-          if [ "$STATUS" != "Running" ]; then
-            echo "Pod is not in Running state: $STATUS"
-            exit 1
-          fi
-          echo "All pods are in the Running state."
-
-      - name: Check if Doku Client pod is running
-        if: steps.list-changed.outputs.changed == 'true'
-        run: |
-          STATUS=$(kubectl get pods -l app=doku-client -n doku -o jsonpath="{.items[*].status.phase}")
+          STATUS=$(kubectl get pods -l app=openlit -n openlit -o jsonpath="{.items[*].status.phase}")
           if [ "$STATUS" != "Running" ]; then
             echo "Pod is not in Running state: $STATUS"
             exit 1
