--- a/charts/openlit/values.yaml
+++ b/charts/openlit/values.yaml
@@ -3,23 +3,21 @@ nameOverride: ""
 # Overrides the default fullname for the release.
 fullnameOverride: ""
 
-# Doku Client configuration
-client:
-  # Toggle to enable/disable the Doku Client
-  enabled: true
-  # Number of replicas for the Client
+# OpenLIT configuration
+openlit:
+  # Number of replicas
   replicaCount: 1
 
   # Image repository and tag
   image:
-    repository: ghcr.io/dokulabs/doku-client
+    repository: ghcr.io/openlit/doku-client
     pullPolicy: IfNotPresent
     # Overrides the image tag whose default is the chart appVersion.
-    tag: ""
+    tag: "0.1.0"
   # List of secrets containing credentials to pull images
   imagePullSecrets: []
 
-  # Kubernetes Service configuration for the client
+  # Kubernetes Service configuration for the OpenLIT
   service:
     # Type of service (e.g., LoadBalancer, NodePort)
     type: LoadBalancer
@@ -28,7 +26,7 @@ client:
     # Session affinity configuration
     sessionAffinity: None
 
-  # Resource limit and request configuration for the client pod
+  # Resource limit and request configuration for the OpenLIT pod
   resources:
     limits:
       cpu: 1000m
@@ -37,7 +35,7 @@ client:
       cpu: 100m
       memory: 128Mi
 
-  # Annotations to be added to the client pods
+  # Annotations to be added to the OpenLIT pods
   podAnnotations: {}
 
   # Node labels for pod assignment
@@ -49,7 +47,7 @@ client:
   # Affinity for pod assignment
   affinity: {}
 
-  # Client-specific configurations
+  # OpenLIT-specific configurations
   config:
     # secret:
     #   # Name of the secret that contains the ClickHouse User and Password
@@ -62,88 +60,17 @@ client:
     # SQLite database URL (where the data is stored)
     sqlite_url: file:/app/client/data/data.db
 
-    # Configuration for the Doku Backend Database (ClickHouse)
+    # Configuration for the OpenLIT Backend Database (ClickHouse)
     database:
       name: default
       # if you set secrets.existingSecret to true, Skip the username field
       username: default
       # if you set secrets.existingSecret to true, Skip the password field
-      password: DOKU
-      host: "doku-db.default.svc.cluster.local"
+      password: OPENLIT
+      host: "openlit-db.default.svc.cluster.local"
       port: "8123"
 
-# Doku Ingester configuration
-ingester:
-  # Toggle to enable/disable the Doku ingester
-  enabled: true
-  # Number of replicas for the ingester
-  replicaCount: 1
-
-  # Image repository and tag
-  image:
-    repository: ghcr.io/dokulabs/doku-ingester
-    pullPolicy: IfNotPresent
-    # Overrides the image tag whose default is the chart appVersion.
-    tag: ""
-  # List of secrets containing credentials to pull images
-  imagePullSecrets: []
-
-  # Ingester Service Configuration
-  service:
-    # Type of service (e.g., LoadBalancer, NodePort)
-    type: LoadBalancer
-    # Port on which the service is exposed
-    port: 9044
-    # Session affinity configuration
-    sessionAffinity: None
-
-  # Resource limit and request configuration for the ingester pod
-  resources:
-    limits:
-      cpu: 1000m
-      memory: 1280Mi
-    requests:
-      cpu: 100m
-      memory: 128Mi
-
-  # Annotations to be added to the ingester pods
-  podAnnotations: {}
-
-  # Node labels for pod assignment
-  nodeSelector: {}
-
-  # Tolerations for pod assignment
-  tolerations: []
-
-  # Affinity for pod assignment
-  affinity: {}
-
-  config:
-    # secret:
-    #   # Name of the secret that contains the ClickHouse User and Password
-    #   name: ""
-    #   # Key in the secret that contains the ClickHouse User's password
-    #   passwordKey: ""
-    #   # Key in the secret that contains the ClickHouse User name
-    #   usernameKey: ""
-
-    # URL to download Pricing data file. Recommneded is to use the default URL provided by Doku
-    pricing:
-      url: "https://raw.githubusercontent.com/dokulabs/doku/main/assets/pricing.json"
-
-    # Configuration for the Doku Backend Database (ClickHouse)
-    database:
-      name: default
-      # if you set secrets.existingSecret to true, Skip the username field
-      username: default
-      # if you set secrets.existingSecret to true, Skip the password field
-      password: DOKU
-      host: "doku-db.default.svc.cluster.local"
-      port: "9000"
-      maxOpenConns: "10"
-      maxIdleConns: "10"
-
-# ClickHouse database configuration (used as the backend for Doku)
+# ClickHouse database configuration (used as the backend for OpenLIT)
 clickhouse:
   # Toggle to enable/disable the ClickHouse database deployment
   enabled: true
@@ -167,7 +94,7 @@ clickhouse:
     # if you set clickhouse.secret, Skip this username field
     user: default
     # if you set clickhouse.secret, Skip this password field
-    password: DOKU
+    password: OPENLIT
 
   # Kubernetes Service configuration for ClickHouse
   service:
@@ -189,7 +116,7 @@ clickhouse:
   #     cpu: 100m
   #     memory: 128Mi
 
-# Ingress configuration (for exposing Doku via an ingress)
+# Ingress configuration (for exposing OpenLIT via an ingress)
 ingress:
   enabled: false
   className: ""
