--- a/charts/openlit/values.yaml
+++ b/charts/openlit/values.yaml
@@ -10,10 +10,10 @@ openlit:
 
   # Image repository and tag
   image:
-    repository: ghcr.io/openlit/doku-client
+    repository: ghcr.io/patcher9/openlit
     pullPolicy: IfNotPresent
     # Overrides the image tag whose default is the chart appVersion.
-    tag: "0.1.0"
+    tag: "0.0.6"
   # List of secrets containing credentials to pull images
   imagePullSecrets: []
 
@@ -62,7 +62,7 @@ openlit:
 
     # Configuration for the OpenLIT Backend Database (ClickHouse)
     database:
-      name: default
+      name: openlit
       # if you set secrets.existingSecret to true, Skip the username field
       username: default
       # if you set secrets.existingSecret to true, Skip the password field
