--- a/charts/openlit/values.yaml
+++ b/charts/openlit/values.yaml
@@ -8,10 +8,10 @@ replicaCount: 1
 
 # Image repository and tag
 image:
-  repository: ghcr.io/patcher9/openlit
+  repository: ghcr.io/openlit/openlit
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "0.0.6"
+  tag: ""
 # List of secrets containing credentials to pull images
 imagePullSecrets: []
 
