--- a/charts/openlit/templates/clickhouse.yml
+++ b/charts/openlit/templates/clickhouse.yml
@@ -1,6 +1,10 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
+  labels:
+    app: {{ .Release.Name }}-db
+    {{- include "openlit.labels" . | nindent 4 }}
+    app.kubernetes.io/component: database
   name: {{ .Release.Name }}-db
   namespace: {{ .Release.Namespace }}
 spec:
@@ -9,10 +13,14 @@ spec:
   selector:
     matchLabels:
       app: {{ .Release.Name }}-db
+      {{- include "openlit.selectorLabels" . | nindent 6 }}
+      app.kubernetes.io/component: database
   template:
     metadata:
       labels:
         app: {{ .Release.Name }}-db
+        {{- include "openlit.labels" . | nindent 8 }}
+        app.kubernetes.io/component: database
     spec:
       terminationGracePeriodSeconds: 10
       containers:
@@ -59,6 +67,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  labels:
+    app: {{ .Release.Name }}-db
+    {{- include "openlit.labels" . | nindent 4 }}
+    app.kubernetes.io/component: database
   name: {{ .Release.Name }}-db
 spec:
   ports:
@@ -71,3 +83,5 @@ spec:
   type: {{ .Values.clickhouse.service.type }}
   selector:
     app: {{ .Release.Name }}-db
+    {{- include "openlit.selectorLabels" . | nindent 4 }}
+    app.kubernetes.io/component: database
