--- a/charts/openlit/templates/ingress.yml
+++ b/charts/openlit/templates/ingress.yml
@@ -17,7 +17,9 @@ kind: Ingress
 metadata:
   name: {{ $fullName }}
   labels:
-    {{- include "test.labels" . | nindent 4 }}
+    app: {{ include "openlit.fullname" . }}
+    {{- include "openlit.labels" . | nindent 4 }}
+    app.kubernetes.io/component: networking
   {{- with .Values.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
