Enable conditional inclusion of Clickhouse StatefulSet in the Helm chart based on the .Values.clickhouse.enabled flag

--- a/charts/openlit/templates/clickhouse.yml
+++ b/charts/openlit/templates/clickhouse.yml
@@ -1,3 +1,4 @@
+{{- if .Values.clickhouse.enabled }}
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -85,3 +86,4 @@ spec:
     app: {{ .Release.Name }}-db
     {{- include "openlit.selectorLabels" . | nindent 4 }}
     app.kubernetes.io/component: database
+{{- end }}
