--- a/charts/openlit/values.yaml
+++ b/charts/openlit/values.yaml
@@ -22,7 +22,7 @@ imagePullSecrets: []
 # Kubernetes Service configuration for the OpenLIT
 service:
   # Type of service (e.g., LoadBalancer, NodePort)
-  type: NodePort
+  type: LoadBalancer
   # Port on which the service is exposed
   port: 3000
   # Session affinity configuration
