--- a/charts/openlit/values.yaml
+++ b/charts/openlit/values.yaml
@@ -5,7 +5,7 @@ fullnameOverride: ""
 
 # Additional labels to add to all resources.
 additionalLabels: {}
-  # my-label: my-value
+# my-label: my-value
 
 # Number of replicas
 replicaCount: 1
@@ -31,7 +31,7 @@ service:
 # Resource limit and request configuration for the OpenLIT pod
 resources:
   limits:
-    cpu: 1000m
+    cpu: 1
     memory: 1280Mi
   requests:
     cpu: 100m
@@ -123,13 +123,13 @@ ingress:
   enabled: false
   className: ""
   annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  # kubernetes.io/ingress.class: nginx
+  # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
+  - host: chart-example.local
+    paths:
+    - path: /
+      pathType: ImplementationSpecific
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
