--- a/charts/openlit/templates/ingress.yml
+++ b/charts/openlit/templates/ingress.yml
@@ -50,7 +50,7 @@ spec:
             backend:
               {{- if semverCompare ">=1.19-0" $.Capabilities.KubeVersion.GitVersion }}
               service:
-                name: {{ $fullName }}
+                name: {{ include "openlit.fullname" . }}
                 port:
                   number: {{ $svcPort }}
               {{- else }}
