fix: fullname ingress

--- a/charts/openlit/templates/ingress.yml
+++ b/charts/openlit/templates/ingress.yml
@@ -54,7 +54,7 @@ spec:
                 port:
                   number: {{ $svcPort }}
               {{- else }}
-              serviceName: {{ $fullName }}
+              serviceName: {{ include "openlit.fullname" . }}
               servicePort: {{ $svcPort }}
               {{- end }}
           {{- end }}
