--- a/charts/openlit/values.yaml
+++ b/charts/openlit/values.yaml
@@ -120,7 +120,7 @@ clickhouse:
 
 # Ingress configuration (for exposing OpenLIT via an ingress)
 ingress:
-  enabled: true
+  enabled: false
   className: "nginx"
   annotations: {}
   # kubernetes.io/ingress.class: nginx
