--- a/charts/openlit/values.yaml
+++ b/charts/openlit/values.yaml
@@ -72,6 +72,9 @@ config:
     host: "openlit-db.default.svc.cluster.local"
     port: "8123"
 
+  # Collects Anonymous metrics about OpenLIT usage. Checkout https://docs.openlit.io/latest/anonymous-telemetry
+  usageMetrics: True
+
 # ClickHouse database configuration (used as the backend for OpenLIT)
 clickhouse:
   # Toggle to enable/disable the ClickHouse database deployment
