--- a/charts/openlit/values.yaml
+++ b/charts/openlit/values.yaml
@@ -72,8 +72,8 @@ config:
     host: "openlit-db.default.svc.cluster.local"
     port: "8123"
 
-  # Collects Anonymous metrics about OpenLIT usage. Checkout https://docs.openlit.io/latest/anonymous-telemetry
-  usageMetrics: True
+  # Set to true or false for anonymous usage metrics. More info: https://docs.openlit.io/latest/anonymous-telemetry
+  usageMetrics: true
 
 # ClickHouse database configuration (used as the backend for OpenLIT)
 clickhouse:
