--- a/charts/openlit/Chart.yaml
+++ b/charts/openlit/Chart.yaml
@@ -8,4 +8,4 @@ icon: https://avatars.githubusercontent.com/u/149867240?s=200&v=4
 
 maintainers:
 - name: patcher9
-  email: patcher9@openlit.io
+  email: patcher@openlit.io
