--- a/charts/openlit/templates/client.yaml
+++ b/charts/openlit/templates/client.yaml
@@ -119,6 +119,12 @@ spec:
           - name: INIT_DB_PASSWORD
             value: "{{ .Values.config.database.password }}"
           {{- end }}
+          {{- if .Values.config.preview_mode.enabled }}
+          - name: DEMO_ACCOUNT_EMAIL
+            value: "{{ .Values.config.preview_mode.account_email }}"
+          - name: DEMO_ACCOUNT_PASSWORD
+            value: "{{ .Values.config.preview_mode.account_password }}"
+          {{- end }}
         resources:
           {{- toYaml .Values.resources | nindent 10 }}
       - name: opentelemetry-collector
