--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -69,7 +69,16 @@ jobs:
             echo "any_changed=false" >> "$GITHUB_OUTPUT"
             echo "No charts need to be released"
           else
-            MATRIX_JSON=$(printf '%s\n' "${CHARTS_TO_RELEASE[@]}" | jq -R . | jq -s '{include: [.[] | {chart: .}]}')
+            # Build JSON matrix manually
+            MATRIX_JSON="{\"include\":["
+            for i in "${!CHARTS_TO_RELEASE[@]}"; do
+              if [ $i -gt 0 ]; then
+                MATRIX_JSON="$MATRIX_JSON,"
+              fi
+              MATRIX_JSON="$MATRIX_JSON{\"chart\":\"${CHARTS_TO_RELEASE[$i]}\"}"
+            done
+            MATRIX_JSON="$MATRIX_JSON]}"
+            
             echo "matrix=$MATRIX_JSON" >> "$GITHUB_OUTPUT"
             echo "any_changed=true" >> "$GITHUB_OUTPUT"
             echo "Charts ready for release: ${CHARTS_TO_RELEASE[*]}"
