--- a/charts/openlit/templates/clickhouse.yml
+++ b/charts/openlit/templates/clickhouse.yml
@@ -30,6 +30,23 @@ spec:
         ports:
         - containerPort: 9000
         - containerPort: 8123
+        readinessProbe:
+          httpGet:
+            path: /ping
+            port: 8123
+          initialDelaySeconds: 20
+          periodSeconds: 10
+          timeoutSeconds: 5
+          successThreshold: 1
+          failureThreshold: 3
+        livenessProbe:
+          httpGet:
+            path: /ping
+            port: 8123
+          initialDelaySeconds: 30
+          periodSeconds: 30
+          timeoutSeconds: 10
+          failureThreshold: 3
         env:
         {{- if .Values.clickhouse.auth.secret.name }}
         - name: CLICKHOUSE_PASSWORD
