--- a/charts/openlit-operator/Chart.yaml
+++ b/charts/openlit-operator/Chart.yaml
@@ -9,7 +9,7 @@ sources:
   - https://github.com/openlit/openlit
 maintainers:
   - name: OpenLIT Team
-    email: support@openlit.io
+    email: contact@openlit.io
     url: https://openlit.io
 keywords:
   - observability
@@ -19,7 +19,5 @@ keywords:
   - instrumentation
   - monitoring
   - tracing
-annotations:
-  category: Observability
-  licenses: Apache-2.0
-kubeVersion: ">=1.20.0"
+icon: https://avatars.githubusercontent.com/u/149867240?s=200&v=4
+
